Update project link to point to simulation app

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                         MAX30102, and Hall sensors for real-time worker safety. Firmware, WorWi simulation, MQTT Python
                         dashboard for hazard alerts.</p>
                     <div class="project-links">
-                        <a href="" target="_blank"
+                        <a href="https://wearable-suite-for-industrial-workers-mx4qgznc8pvbmsfej5dudx.streamlit.app/" target="_blank"
                             class="btn-demo">Simulation</a>
                     </div>
                 </div>
